--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.8",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "expo": "^47.0.13",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.5",
+    "tailwind": "^4.0.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
